# password-manager

./: Cargo.toml  README.md
data/: .conf  a.json  g.json  ivan.json  ivo.json  mitko.json  petko.json  test.json  testuser.json  testuser2.json
src/: directory.rs  encryption.rs  input_handler.rs  lib.rs  main.rs  program.rs  record.rs  terminal.rs  user.rs
tests/: directory_tests.rs  encryption_tests.rs  functionality_tests.rs  record_tests.rs
