[package]
name = "password-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.24.0"
tui = "0.18"
rust-argon2 = "1.0"
rust-crypto = "^0.2"
aes = "0.8.1"
sha256 = "1.0.3"
md5 = "0.7.0"
rpassword = "7.0.0"
serde_json = "1.0.83"
serde = {version = "1.0.142", features = ["derive"] }
pbkdf2 = "0.11.0"
rand_core = { version = "0.6.3", features = ["std"] }
snafu = "0.7.1"