[package]
name = "password-manager"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25.0"
tui = "0.19.0"
aes = "0.8.1"
sha256 = "1.0.3"
rpassword = "7.0.0"
serde_json = "1.0.83"
serde = {version = "1.0.142", features = ["derive"] }
pbkdf2 = "0.11.0"
snafu = "0.7.1"
cbc = {version = "0.1.2", features = ["std"] }
terminal-clipboard = "0.3.1"